--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,23 +3,23 @@ requires = ["setuptools>=68.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "my-app"
+name = "secret-hitler"
 version = "0.1.0"
-description = "A Python app with both web and CLI interfaces"
+description = "Online version of the Secret Hitler board game"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "click>=8.0",
     "fastapi>=0.100",
     "uvicorn[standard]>=0.23",
+    "pydantic>=2.0",
 ]
-
-[project.scripts]
-my-app = "my_app.cli:main"
-my-app-web = "my_app.web:run"
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
-    "httpx>=0.24",  # For testing FastAPI
+    "pytest-cov>=4.0",
+    "httpx>=0.24",
+    "black>=23.0",
+    "ruff>=0.1",
+    "mypy>=1.0",
 ]
