Switch to websockets for updating state

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi>=0.100",
     "uvicorn[standard]>=0.23",
     "pydantic>=2.0",
+    "python-socketio>=5.10",
 ]
 
 [project.optional-dependencies]
