--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,13 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# SQLite database files
+data/
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
+
 # Flask stuff:
 instance/
 .webassets-cache
