--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "uvicorn[standard]>=0.23",
     "pydantic>=2.0",
     "python-socketio>=5.10",
+    "sqlalchemy>=2.0",
 ]
 
 [project.optional-dependencies]
