Update example env file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 WEB_URL="http://localhost:3000"
+API_ROOT_URL="http://localhost:8000"
 VITE_API_URL="http://localhost:8000/api"
 VITE_WS_URL="ws://localhost:8000/api/ws"
+
+SQLITE_FILE="secret-hitler.db"
+LOG_FILE="/var/log/secret-hitler.log"
