--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,25 @@
 version: '3.8'
 
 services:
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
+    restart: unless-stopped
+
   app:
     build:
       context: .
       dockerfile: Dockerfile
       args:
-        - VITE_API_URL=http://localhost:8000/api
-        - VITE_WS_URL=ws://localhost:8000/api/ws
-    ports:
-      - "8000:8000"
+        - VITE_API_URL=http://localhost:8080/api
+        - VITE_WS_URL=ws://localhost:8080/api/ws
+    expose:
+      - "8000"
     volumes:
       # Persist SQLite database
       - ./data:/app/data
