--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic>=2.0",
     "python-socketio>=5.10",
     "sqlalchemy>=2.0",
+    "jinja2>=3.0",
 ]
 
 [project.optional-dependencies]
